Work on search box. Center-ish on page, could use some work.

--- a/timeSeries.html
+++ b/timeSeries.html
@@ -14,9 +14,11 @@
         <h2><span>Start</span></h2>
         <div class='slide_cont' id='start'>
             <div class='slide'>
-                    <h1>Search for a company</h1>
-                    <input id='in' type='text'/><input type="button" value='ok'>
-                    <p id='out'></p>
+                <form id='searchBox'>
+                    <h1>Search for a company to begin</h1>
+                    <input id='text' type="text" placeholder="Search..." required>
+                    <input id='button' type="button" value="Search">
+                </form>
             </div>
         </div>
     </li>
