--- a/timeSeries.html
+++ b/timeSeries.html
@@ -11,27 +11,31 @@
     <div id='accordion_cont'>
     <ol>
     <li>
-        <h2><span>Start</span></h2>
+        <h2><span class='slide_title'>Start</span></h2>
         <div class='slide_cont' id='start'>
-            <div class='slide'>
-                <form id='searchBox'>
-                    <h1>Search for a company to begin</h1>
-                    <input id='text' type="text" placeholder="Search..." required>
-                    <input id='button' type="button" value="Search">
-                </form>
-            </div>
+        <div class='slide'>
+            <form id='searchBox' autocomplete='off'>
+                <h1>Search for a company to begin</h1>
+                <input id='text' type="text" placeholder="Search...">
+                <input id='button' type="button" value="Search">
+            </form>
+        </div>
         </div>
     </li>
     <li>
-        <h2><span>Visulaizations</span></h2>
+        <h2><span class='slide_title' id='viz_slide'>Visulaizations</span></h2>
         <div class='slide_cont' id='viz'>
-            <div class='slide'></div>
+        <div class='slide'>
+            <div id='head_sec'><h1 id='comp_name'>Company Name</h1></div>
+            <div id='viz_cont'></div>
+            <div id='legend_cont'></div>
+        </div>
         </div>
     </li>
     <li>
-        <h2><span>Company Info</span></h2>
+        <h2><span class='slide_title'>Company Info</span></h2>
         <div class='slide_cont' id='info'>
-            <div class='slide'></div>
+        <div class='slide'></div>
         </div>
     </li>
     </ol>
