Each chart takes up a whole svg rather than a portion.

--- a/timeSeries.html
+++ b/timeSeries.html
@@ -34,7 +34,7 @@
                     <span class='company_perc'>0.00</span>%
                 </h1>
             </div>
-            <div class='main_div' id='visualizations'><svg></svg></div>
+            <div class='main_div' id='visualizations'></div>
             <div class='secondary_div' id='legend'></div>
         </div>
         </div>
