--- a/timeSeries.html
+++ b/timeSeries.html
@@ -6,6 +6,8 @@
     
     <link href="css/timeSeries.css" rel="stylesheet" type="text/css"/>
     <link href="css/liteAccordion.css" rel="stylesheet" type="text/css"/>
+    <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <div id='accordion_cont'>
@@ -34,8 +36,10 @@
                     <span class='company_perc'>0.00</span>%
                 </h1>
             </div>
-            <div class='main_div' id='visualizations'></div>
-            <div class='secondary_div' id='legend'></div>
+            <div class='main_div' id='visualizations'><ul></ul></div>
+            <div class='secondary_div' id='legend'>
+                <i id='trash' class='fa fa-trash fa-5x hidden'></i>
+            </div>
         </div>
         </div>
     </li>
@@ -66,6 +70,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="js/liteAccordion.jquery.min.js" type="text/javascript"></script>
     <script src="js/d3.v3.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
     <script src="js/timeSeries.js" type="application/javascript"></script>
 </body>
 </html>
