--- a/timeSeries.html
+++ b/timeSeries.html
@@ -8,6 +8,22 @@
     <link href="css/liteAccordion.css" rel="stylesheet" type="text/css"/>
     <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <style>
+        .axis path,
+        .axis line {
+          fill: none;
+          stroke: #000;
+          shape-rendering: crispEdges;
+        }
+        .x.axis path {
+          display: none;
+        }
+        .line {
+          fill: none;
+          stroke: steelblue;
+          stroke-width: 1.5px;
+        }
+    </style>
 </head>
 <body>
     <div id='accordion_cont'>
@@ -71,6 +87,7 @@
     <script src="js/liteAccordion.jquery.min.js" type="text/javascript"></script>
     <script src="js/d3.v3.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="js/timeSeries.js" type="application/javascript"></script>
+    <script src="js/ts_charts.js" type="application/javascript"></script>
+    <script src="js/ts_listeners.js" type="application/javascript"></script>
 </body>
 </html>
