Add companies/attributes with data correctly. Charts dont work.

--- a/timeSeries.html
+++ b/timeSeries.html
@@ -20,7 +20,6 @@
         }
         .line {
           fill: none;
-          stroke: steelblue;
           stroke-width: 1.5px;
         }
     </style>
@@ -47,6 +46,7 @@
         <div class='slide_container' id='visulaization_slide'>
             <div class='page_top'>
                 <input id='add' type="button" value="Add Attribute">
+                <input id='add_c' type="button" value="Add Company">
                 <h1>
                     <span class='company_name'>Company Name</span>&nbsp;|
                     <span class='company_perc'>0.00</span>%
