--- a/timeSeries.html
+++ b/timeSeries.html
@@ -87,7 +87,8 @@
     <script src="js/liteAccordion.jquery.min.js" type="text/javascript"></script>
     <script src="js/d3.v3.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="js/ts_charts.js" type="application/javascript"></script>
+    <script src="js/Chart.js" type="text/javascript"></script>
+    <script src="js/ts_data_logic.js" type="application/javascript"></script>
     <script src="js/ts_listeners.js" type="application/javascript"></script>
 </body>
 </html>
