Chart now scale with height. Lines update correctly.

--- a/timeSeries.html
+++ b/timeSeries.html
@@ -46,6 +46,7 @@
         <div class='slide_container' id='visulaization_slide'>
             <div class='page_top'>
                 <input id='add' type="button" value="Add Attribute">
+                <input id='c_text' type="text" placeholder="Add Company">
                 <input id='add_c' type="button" value="Add Company">
                 <h1>
                     <span class='company_name'>Company Name</span>&nbsp;|
