Add MVC. Charts now scale when new company added.

--- a/timeSeries.html
+++ b/timeSeries.html
@@ -89,7 +89,8 @@
     <script src="js/d3.v3.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
     <script src="js/Chart.js" type="text/javascript"></script>
-    <script src="js/ts_data_logic.js" type="application/javascript"></script>
-    <script src="js/ts_listeners.js" type="application/javascript"></script>
+    <script src="js/Model.js" type="text/javascript"></script>
+    <script src="js/Controller.js" type="application/javascript"></script>
+    <script src="js/Listeners.js" type="application/javascript"></script>
 </body>
 </html>
