--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>TimeSeries</title>
     
-    <link href="css/timeSeries.css" rel="stylesheet" type="text/css"/>
-    <link href="css/Chart.css" rel="stylesheet" type="text/css"/>
-    <link href="css/liteAccordion.css" rel="stylesheet" type="text/css"/>
-    <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/timeSeries.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/Chart.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/liteAccordion.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -73,12 +73,12 @@
     </div>
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="js/liteAccordion.jquery.min.js" type="text/javascript"></script>
-    <script src="js/d3.v3.min.js" type="text/javascript"></script>
-    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="js/Chart.js" type="text/javascript"></script>
-    <script src="js/Model.js" type="text/javascript"></script>
-    <script src="js/Controller.js" type="application/javascript"></script>
-    <script src="js/Listeners.js" type="application/javascript"></script>
+    <script src="/javascripts/liteAccordion.jquery.min.js" type="text/javascript"></script>
+    <script src="/javascripts/d3.v3.min.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/javascripts/Chart.js" type="text/javascript"></script>
+    <script src="/javascripts/Model.js" type="text/javascript"></script>
+    <script src="/javascripts/Controller.js" type="application/javascript"></script>
+    <script src="/javascripts/Listeners.js" type="application/javascript"></script>
 </body>
 </html>
