Main dropdown box done.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <form id='searchBox' autocomplete='off'>
                 <h1>Search for a company to begin</h1>
                 <input class='text' type="text" placeholder="Search...">
-                <input class='button' type="button" value="Search">
+                <input class='button' type="button" value="Search" disabled>
+                <select class='select'></select>
             </form>
         </div>
         </div>
