Started on brush for focus and context. WIP.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                     <span class='company_perc'>0.00</span>%
                 </h1>
             </div>
-            <div class='main_div' id='visualizations'><ul></ul></div>
+            <div class='main_div' id='visualizations'>
+                <div id='charts'><ul></ul></div>
+                <div id='slider'></div>
+            </div>
             <div class='secondary_div' id='legend'>
                 <form autocomplete='off'>
                     <input class='text' type="text" placeholder="Compare With...">
@@ -78,6 +81,7 @@
     <script src="/javascripts/d3.v3.min.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/javascripts/Chart.js" type="text/javascript"></script>
+    <script src="/javascripts/Slider.js" type="text/javascript"></script>
     <script src="/javascripts/Model.js" type="text/javascript"></script>
     <script src="/javascripts/Controller.js" type="application/javascript"></script>
     <script src="/javascripts/Listeners.js" type="application/javascript"></script>
