--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
                     <span class='company_perc'>0.00</span>%
                 </h1>
             </div>
-            <div class='main_div'></div>
+            <div class='main_div'>
+                <table class='comp_table selected' id='comp_attributes'>
+                    <thead><tr><th>Column 1</th></tr></thead>
+                </table>
+                <table class='comp_table' id='comp_companies'>
+                    <thead><tr><th>Column 1</th></tr></thead>
+                </table>
+            </div>
             <div class='secondary_div'></div>
         </div>
         </div>
