Done yValue on hover. Viz page almost done.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <div class='page_top'>
                 <input id='add' type="button" value="Add Attribute">
                 <h1>
-                    <span class='company_name'>Company Name</span>&nbsp;|
-                    <span class='company_perc'>0.00</span>%
+                    <span class='company_name'>Company Name</span>
                 </h1>
             </div>
             <div class='main_div' id='visualizations'>
