--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <form id='searchBox' autocomplete='off'>
                 <h1>Search for a company to begin</h1>
                 <input class='text' type="text" placeholder="Search...">
-                <input class='button' type="button" value="Search" disabled>
+                <input class='button' type="button" value="Search">
                 <select class='select'></select>
             </form>
         </div>
