--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="/stylesheets/Chart.css" rel="stylesheet" type="text/css"/>
     <link href="/stylesheets/liteAccordion.css" rel="stylesheet" type="text/css"/>
     <link href="/stylesheets/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/tablesorter.css" rel="stylesheet" type="text/css"/>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -18,7 +19,7 @@
         <div>
         <div class='slide_container' id='start_slide'>
             <form id='searchBox' autocomplete='off'>
-                <h1>Search for a company to begin</h1>
+                <h1>Search for an industry to begin</h1>
                 <input class='text' type="text" placeholder="Search...">
                 <input class='button' type="button" value="Search">
                 <select class='select'></select>
@@ -38,7 +39,7 @@
                 </h1>
             </div>
             <div class='main_div' id='visualizations'>
-                <div id='charts'><ul></ul></div>
+                <div id='charts' class='scroll_div'><ul></ul></div>
                 <div id='slider'></div>
             </div>
             <div class='secondary_div' id='legend'>
@@ -53,28 +54,30 @@
     </li>
         
     <li>
-        <h2><span class='slide_title'>Company Info</span></h2>
+        <h2><span class='slide_title'>Companies</span></h2>
         <div>
         <div class='slide_container' id='info_slide'>
             <div class='page_top'>
-                <div id='compare_cont'>
+                <!--<div id='compare_cont'>
                     <p>Compare</p>
                     <div class='selected' id='comp_attr'>Attributes</div>
                     <div id='comp_comp'>Companies</div>
-                </div>
+                </div>-->
                 <h1>
-                    <span class='company_name'>Company Name</span>&nbsp;|
-                    <span class='company_perc'>0.00</span>%
+                    <span class='company_name'>Company Name</span>
                 </h1>
             </div>
-            <div class='main_div'>
-                <table class='comp_table selected' id='comp_attributes'>
-                    <thead><tr><th>Column 1</th></tr></thead>
+            <div class='main_div'><div class='scroll_div'>
+                <table id='industry_table' class='tablesorter'>
+                    <thead><tr>
+                        <th>Company</th>
+                        <th>Symbol</th>
+                        <th>Industry</th>
+                        <th>Years</th>
+                    </tr></thead>
+                    <tbody></tbody>
                 </table>
-                <table class='comp_table' id='comp_companies'>
-                    <thead><tr><th>Column 1</th></tr></thead>
-                </table>
-            </div>
+            </div></div>
             <div class='secondary_div'></div>
         </div>
         </div>
@@ -86,6 +89,7 @@
     <script src="/javascripts/liteAccordion.jquery.min.js" type="text/javascript"></script>
     <script src="/javascripts/d3.v3.min.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery.tablesorter.min.js" type="text/javascript"></script>
     <script src="/javascripts/Chart.js" type="text/javascript"></script>
     <script src="/javascripts/Slider.js" type="text/javascript"></script>
     <script src="/javascripts/Model.js" type="text/javascript"></script>
