--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <tbody></tbody>
                 </table>
             </div></div>
-            <div class='secondary_div'></div>
+            <!--<div class='secondary_div'></div>-->
         </div>
         </div>
     </li>
@@ -61,7 +61,7 @@
                 <h1 class='title industry_name'>Placeholder</h1>
                 <h3>Placeholder</h3>
             </div>
-            <div class='main_div' id='visualizations'>
+            <div class='main_div split' id='visualizations'>
                 <div id='charts' class='scroll_div'><ul></ul></div>
                 <div id='slider'></div>
             </div>
