Move everything to raspberry pi

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class='slide_container' id='info_slide'>
             <div class='page_top'>
                 <h1 class='title industry_name'>Placeholder</h1>
-                <h3>Click on a company to add to charts.</h3>
+                <h3>Click on companies to add them to the visualizations</h3>
             </div>
             <div class='main_div'><div class='scroll_div'>
                 <table id='company_table' class='tablesorter'>
@@ -43,6 +43,7 @@
                         <th>Company</th>
                         <th>Symbol</th>
                         <th>Industry</th>
+			<th>Sector</th>
                         <th>Years</th>
                     </tr></thead>
                     <tbody></tbody>
