Move Listener stuff to Controller. Start on sector list.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <input class='text' type="text" placeholder="Search...">
                 <input class='button' type="button" value="Search">
             </form>
+            <ul id='listbox'></ul>
         </div>
         </div>
     </li>
